test/fail/generic-def-request.grace
def name = object {}

name<type {}>
